[package]
name = "proxypen"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "proxypen"
path = "src/main.rs"

[lib]
name = "proxypen"
path = "src/lib.rs"

[dependencies]
# SOCKS5 protocol types from shadowquic
shadowquic = { version = "0.3", default-features = false, features = ["shadowquic-quinn"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP types
http = "1"
bytes = "1"

# HTTP/2
h2 = "0.4"

# HTTP/3 (QUIC)
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"

# TLS
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = "0.26"
webpki-roots = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = "2"

# Socket-level options (interface binding for direct mode)
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
